# Forecasting-Day-Ahead-and-Translating-to-Prompt-Curve-Views

./: .env.example  .gitignore  01_sources.md  ENTSOE_TEST_RESULTS.md  Makefile  README.md  market_choice.txt  pipeline.py  pyproject.toml  quick_check.py  requirements.txt  schema.yaml  test_entsoe_fetch.py  test_smard2.py  test_smard_fetch.py
config/: features.yaml  market.yaml  model.yaml  qa_thresholds.yaml  reporting.yaml  schema.yaml
docs/: 00_market_choice.txt  00_scope.md  01_sources.md  02_schema_notes.md  03_design_choices.md  04_manual_data_download.md  progress.md  tests.json
report/: report.md  submission.md
report/figures/: .gitkeep
reports/llm_logs/: llm_call_20260129_064611.json
reports/metrics/: baseline_20260129_024153_DE_LU.json  baseline_20260129_024201_DE_LU.json  baseline_20260129_024210_DE_LU.json  baseline_20260129_024217_DE_LU.json  baseline_20260129_024230_DE_LU.json  baseline_20260129_034844_DE_LU.json  baseline_20260129_040851_DE_LU.json  baseline_20260129_041612_DE_LU.json  baseline_20260129_041722_DE_LU.json  baseline_20260129_044717_DE_LU.json  baseline_20260129_044740_DE_LU.json  baseline_20260129_044751_DE_LU.json  baseline_20260129_044801_DE_LU.json  baseline_20260129_044811_DE_LU.json  (+60 more)
scripts/: download_sample.sh  fetch_energy_charts.py  generate_figures.py  md_to_pdf.py  run_local.sh  run_morning_signal.py  run_trading_step.py
tests/: test_cache_only_errors.py  test_config.py  test_features.py  test_no_api_key_behavior.py  test_qa_gate.py  test_schema.py  test_trading_agent.py  test_train_offline.py  test_validate_offline.py
(+148 files in other folders)
